--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL Database configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/news-shorts-agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://news-shorts.cnyaoe0oke5w.ap-south-1.rds.amazonaws.com:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://news-shorts.cnyaoe0oke5w.ap-south-1.rds.amazonaws.com:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=news_user
 spring.datasource.password=news_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,3 +11,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Show SQL queries in logs
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
