--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
 # MySQL Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #spring.datasource.url=jdbc:mysql://news-shorts.cnyaoe0oke5w.ap-south-1.rds.amazonaws.com:3306/news_shorts_agent?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=news_user
-spring.datasource.password=news_pass
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.datasource.username=news_user
+#spring.datasource.password=news_pass
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.h2.console.enabled=true
+# Use H2 in-memory database for local development
+spring.datasource.url=jdbc:h2:mem:newsdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# For in-memory DB recreate schema on each run; change to 'update' if you prefer
+spring.jpa.hibernate.ddl-auto=create-drop
+# Enable H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 # Show SQL queries in logs
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
